[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'    # optimize for size
lto = true         # enable link time optimization
codegen-units = 1  # redus number of codegen units to increase optimizations
panic = 'abort'    # abort on panic
strip = true       # strip symbols from binary (rust 1.59+)

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
